@@ -223,7 +223,7 @@ subroutine dyndiag (nat,ntyp,amass,ityp,dyn,w2,z)
   !   On output: w2 = energies, z = displacements
   !
   use kinds, only: dp
-  use constants, only: amconv
+  use constants, only: amu_ry
   implicit none
   ! input
   integer nat, ntyp, ityp(nat)
@@ -282,7 +282,7 @@ subroutine dyndiag (nat,ntyp,amass,ityp,dyn,w2,z)
            do jpol = 1,3
              dyn2((na-1)*3+ipol, (nb-1)*3+jpol) = &
                   dyn2((na-1)*3+ipol, (nb-1)*3+jpol) / &
-                  (amconv*sqrt(amass(nta)*amass(ntb)))
+                  (amu_ry*sqrt(amass(nta)*amass(ntb)))
           end do
        end do
     end do
@@ -300,7 +300,7 @@ subroutine dyndiag (nat,ntyp,amass,ityp,dyn,w2,z)
     do na = 1,nat
        nta = ityp(na)
        do ipol = 1,3
-          z((na-1)*3+ipol,i) = z((na-1)*3+ipol,i)/ sqrt(amconv*amass(nta))
+          z((na-1)*3+ipol,i) = z((na-1)*3+ipol,i)/ sqrt(amu_ry*amass(nta))
        end do
     end do
  end do
