@@ -430,7 +430,7 @@ END MODULE spin_orb
 !
 MODULE pwcom
   !
-  USE constants, ONLY : e2, rytoev, amconv, pi, tpi, fpi
+  USE constants, ONLY : e2, rytoev, pi, tpi, fpi
   USE cell_base, ONLY : celldm, at, bg, alat, omega, tpiba, tpiba2, ibrav
   USE basis
   USE gvect
